Mudança de icone, Colunas passadas para i18n

--- a/WEB/wwwroot/i18n/i18n.properties
+++ b/WEB/wwwroot/i18n/i18n.properties
@@ -1,1 +1,7 @@
 TituloAutopecas=Auto Peças
+
+ColunaNome=Nome
+ColunaDescricao=Descrição
+ColunaCategoria=Categoria
+ColunaDataDeFabricacao=Data de Fabricação
+ColunaEstoque=Estoque 
