Tipo navegação adicionado e i18n organizado

--- a/WEB/wwwroot/i18n/i18n.properties
+++ b/WEB/wwwroot/i18n/i18n.properties
@@ -1,7 +1,9 @@
+#Titulo da Página
 TituloAutopecas=Auto Peças
-
+#Culonas da minha lista
 ColunaNome=Nome
 ColunaDescricao=Descrição
 ColunaCategoria=Categoria
 ColunaDataDeFabricacao=Data de Fabricação
 ColunaEstoque=Estoque 
+#..........
