--- a/WEB/wwwroot/i18n/i18n.properties
+++ b/WEB/wwwroot/i18n/i18n.properties
@@ -6,4 +6,5 @@ ColunaDescricao=Descrição
 ColunaCategoria=Categoria
 ColunaDataDeFabricacao=Data de Fabricação
 ColunaEstoque=Estoque 
-#..........
+#Tela de Detalhes
+TituloDetalhe=Detalhes
