Tela de detalhe recebe e mostra meu objeto

--- a/WEB/wwwroot/i18n/i18n.properties
+++ b/WEB/wwwroot/i18n/i18n.properties
@@ -7,4 +7,4 @@ ColunaCategoria=Categoria
 ColunaDataDeFabricacao=Data de Fabricação
 ColunaEstoque=Estoque 
 #Tela de Detalhes
-TituloDetalhe=Detalhes
+TituloDetalhe=DETALHES
