--- a/WEB/wwwroot/i18n/i18n.properties
+++ b/WEB/wwwroot/i18n/i18n.properties
@@ -7,4 +7,5 @@ ColunaCategoria=Categoria
 ColunaDataDeFabricacao=Data de Fabricação
 ColunaEstoque=Estoque 
 #Tela de Detalhes
-TituloDetalhe=DETALHES
+TituloDeDetalhe=DETALHES
+TituloDaLista=LISTA
