Código refatorado, Froms adicionado

--- a/WEB/wwwroot/i18n/i18n.properties
+++ b/WEB/wwwroot/i18n/i18n.properties
@@ -1,11 +1,12 @@
-#Titulo da Página
+#View ListaDePecas
 TituloAutopecas=Auto Peças
-#Culonas da minha lista
 ColunaNome=Nome
 ColunaDescricao=Descrição
 ColunaCategoria=Categoria
 ColunaDataDeFabricacao=Data de Fabricação
 ColunaEstoque=Estoque 
-#Tela de Detalhes
+#View Detalhe
 TituloDeDetalhe=DETALHES
 TituloDaLista=LISTA
+BotaoEditar=Editar
+BotaoRemover=Remover
