--- a/WEB/wwwroot/i18n/i18n.properties
+++ b/WEB/wwwroot/i18n/i18n.properties
@@ -6,7 +6,7 @@ ColunaCategoria=Categoria
 ColunaDataDeFabricacao=Data de Fabricação
 ColunaEstoque=Estoque 
 #View Detalhe
-TituloDeDetalhe=DETALHES
-TituloDaLista=LISTA
+TituloDeDetalhe=Detalhes
+TituloDaLista=Peças
 BotaoEditar=Editar
 BotaoRemover=Remover
