View, Propriedades, buttons de Cadastro adicionado

--- a/WEB/wwwroot/i18n/i18n.properties
+++ b/WEB/wwwroot/i18n/i18n.properties
@@ -11,3 +11,7 @@ TituloDeDetalhe=Detalhes
 TituloDaLista=Peças
 BotaoEditar=Editar
 BotaoRemover=Remover
+
+#View Cadastro
+botaoSalvar=Salvar
+botaoCancelar=Cancelar
