--- a/WEB/wwwroot/i18n/i18n.properties
+++ b/WEB/wwwroot/i18n/i18n.properties
@@ -6,6 +6,13 @@ ColunaCategoria=Categoria
 ColunaDataDeFabricacao=Data de Fabricação
 ColunaEstoque=Estoque 
 
+#Campos das Views 
+CampoNome=Nome
+CampoDescricao=Descrição
+CampoCategoria=Categoria
+CampoDataDeFabricacao=Data de Fabricação
+CampoEstoque=Estoque
+
 #View Detalhe
 TituloDeDetalhe=Detalhes
 TituloDaLista=Peças
@@ -15,3 +22,4 @@ BotaoRemover=Remover
 #View Cadastro
 botaoSalvar=Salvar
 botaoCancelar=Cancelar
+TituloCadastro=Cadastro
