View e controller para NotFound adicionadas e funcionando

--- a/WEB/wwwroot/i18n/i18n.properties
+++ b/WEB/wwwroot/i18n/i18n.properties
@@ -23,3 +23,8 @@ BotaoRemover=Remover
 botaoSalvar=Salvar
 botaoCancelar=Cancelar
 TituloCadastro=Cadastro
+
+#NotFound
+NotFoundTitulo = Oops... Página não encontrada.
+NotFoundAviso = ERROR \n 404
+NotFoundDescricao = Verifique a URL e tente novamente. 
