Mensagens de toda aplicação passadas para i18n

--- a/WEB/wwwroot/i18n/i18n.properties
+++ b/WEB/wwwroot/i18n/i18n.properties
@@ -24,7 +24,13 @@ botaoSalvar=Salvar
 botaoCancelar=Cancelar
 TituloCadastro=Cadastro
 
-#NotFound
+#View NotFound
 NotFoundTitulo = Oops... Página não encontrada.
 NotFoundAviso = ERROR \n 404
 NotFoundDescricao = Verifique a URL e tente novamente. 
+
+#Mensagens Controllers
+MensagemSucesso=Peça removido com sucesso !
+MensagemErro=Erro ao remover a peça !
+MensagemAviso=Deseja mesmo remover essa peça ?
+MensagemErroNoCampo=Por favor preecha o campo corretamente!
