Refatoração: Todas mensagens da aplicação vem de i18n

--- a/WEB/wwwroot/i18n/i18n.properties
+++ b/WEB/wwwroot/i18n/i18n.properties
@@ -31,6 +31,6 @@ NotFoundDescricao = Verifique a URL e tente novamente.
 
 #Mensagens Controllers
 MensagemSucesso=Peça removido com sucesso !
-MensagemErro=Erro ao remover a peça !
+mensagemErro=Erro ao remover a peça !
 MensagemAviso=Deseja mesmo remover essa peça ?
 MensagemErroNoCampo=Por favor preecha o campo corretamente!
