Refatoração: Fetch em repositorio e statusCode em todas req...

--- a/WEB/wwwroot/i18n/i18n.properties
+++ b/WEB/wwwroot/i18n/i18n.properties
@@ -34,3 +34,8 @@ MensagemSucesso=Peça removido com sucesso !
 mensagemErro=Erro ao remover a peça !
 MensagemAviso=Deseja mesmo remover essa peça ?
 MensagemErroNoCampo=Por favor preecha o campo corretamente!
+
+#Mensagens Repositorio
+ErroAoObterTodos=Não Foi Possível carregar a lista !
+ErroAoAdicionar=Não foi posspivel adicionar a Peça !
+ErroAoEditar=Não foi Possível editar essa peça !
